deploy/kubernetes/manifests-policy/netpol-cart-db-access.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: carts-db-access
  namespace: sock-shop
spec:
  podSelector:
    matchLabels:
      name: carts-db
  ingress:
    - from:
        - podSelector:
            matchLabels:
              name: carts
      ports:
        - protocol: TCP
          port: 27017
