deploy/kubernetes/manifests-policy/netpol-cortex-access.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cortex-access
  namespace: sock-shop
spec:
  podSelector: {}
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: monitoring
