deploy/kubernetes/manifests-policy/netpol-default-deny.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: sock-shop
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: sock-shop
spec:
  podSelector: {}
  policyTypes:
  - Ingress
